--- a/Clase03/index.html
+++ b/Clase03/index.html
@@ -9,18 +9,26 @@
 
 </head>
 <body>
-    <dir><h1> Etiqueta en bloque  </h1></dir> 
+    <!--<dir><h1> Etiqueta en bloque  </h1></dir> -->
     <br><br><br>
     <div id="div1">
         ESTO ES UNA DIVISION
     </div>
     <br><br><br>
     <div id="div2">
-    <dir><h2> Etiqueta en bloque 2 con STYLE  </h2></dir>
+    <!--<dir><h2> Etiqueta en bloque 2 con STYLE  </h2></dir>-->
     </div>
     <!--El DIR  es para que sea etiqueta en bloque-->
     <!--Normalize le saca todos los estilos que tiene el 
     navegador por defecto-->
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Link2</a></li>
+        <li><a href="#">Link3</a></li>
+        <li><a href="#">Link4</a></li>
+
+
+    </ul>
     
 </body>
 </html>
