--- a/Clase06/ABMLabIII/public/index.html
+++ b/Clase06/ABMLabIII/public/index.html
@@ -29,7 +29,8 @@
                 <tr>
                     <th>Nombre</th>
                     <th>Apellido</th>
-                    <th>Modificar/Borrar</th>                  
+                    <th>Borrar</th>
+                    <th>Modificar  </th>                  
                   
                 </tr>
                  
