--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -5,12 +5,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--<link rel="stylesheet" href="css/estilos.css">-->
   <script src="js/jquery-3.2.1.js"></script>
-  <!-- <script src="js/script.js"></script> -->
+  <script src="TS/app.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-  <title>Laboratorio III</title>
+  <title>Laboratorio III - Practica 2Parcial</title>
 </head>
 
 
@@ -41,7 +40,7 @@
   <!-- <body style="padding-top:65px"> -->
 
     <!-- <section id="inscripcion" style="background-color:red;padding-top:65px;padding-bottom:45px;"> -->
-        <!-- FORMULARIOS ENTRADA -->
+    <!-- FORMULARIOS ENTRADA -->
             <!-- ID -> COMPLETAR
             NOMBRE -> COMPLETAR
             EDAD -> COMPLETAR
