OK LA PARTE DE CARGAR EL JSON EN LOCALSTORAGE

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -93,7 +93,7 @@
       <!-- BOTONES -->
       <div class="container row">
         <!-- AGREGAR -->    
-                <button class='btn btn-success btn-sm' type="button" id="btnEnviar" value="Guardar" onclick="agregarMascota()">
+                <button class='btn btn-success btn-sm' type="button" id="btnEnviar" value="Guardar" onclick="agregarMascota();">
                     AGREGAR
                     <i class="glyphicon glyphicon-plus"></i>
                 </button>
