--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -130,7 +130,7 @@
       <div class="table-responsive">
         <table class="table table-hover" id="tabla">
           <thead>
-            <tr>
+            <tr class="info">
               <th>ID</th>
               <th>Nombre</th>
               <th>Edad</th>
