--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -127,22 +127,22 @@
       <div class="checkbox">
         <caption><h2>Filtrar listado por:</h2></caption>
         <label>
-            <input type="checkbox" name="idfiltro" id="idfiltro">ID
+            <input type="checkbox" class="checkItems" name="idfiltro" id="idfiltro" value="ID">ID
         </label>
 
         <label>
-            <input type="checkbox" name="nombrefiltro" id="nombrefiltro">NOMBRE
+            <input type="checkbox" class="checkItems" name="nombrefiltro" id="nombrefiltro" value="NOMBRE">NOMBRE
         </label>
 
         <label>
-           <input type="checkbox" name="edadfiltro" id="edadfiltro">EDAD
+           <input type="checkbox" class="checkItems" name="edadfiltro" id="edadfiltro" value="EDAD">EDAD
         </label>
 
         <label>
-            <input type="checkbox" name="tipofiltro" id="tipofiltro">TIPO
+            <input type="checkbox" class="checkItems" name="tipofiltro" id="tipofiltro" value="TIPO">TIPO
         </label>
         <label>
-          <input type="checkbox" name="cantPatasfiltro" id="cantPatasfiltro">CANT. PATAS
+          <input type="checkbox" class="checkItems" name="cantPatasfiltro" id="cantPatasfiltro" value="CANTPATAS">CANT. PATAS
       </label>
     </div>
     <!-- TABLA LISTADO -->
