AL FUNCIONAL LA TABLA

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -54,7 +54,7 @@
             CANTIDAD PATAS -> COMPLETAR -->
     <div class"row">   
             <!--  ID-->
-            <div class="form-group">
+              <div class="form-group">
               <label for="id">ID</label><br>
               <input type="text" id="id" class="sinError form-control" name="id" placeholder="ID.." autocomplete="off" autofocus><br>
               </div>
@@ -153,13 +153,14 @@
       <h2>Listado de Mascotas</h2>
       <div class="table-responsive">
         <table class="table table-hover" id="tabla">
-          <thead>
             <tr class="info">
-              <th>ID</th>
+            <thead id="tCabecera">
+           
+              <!-- <th>ID</th>
               <th>Nombre</th>
               <th>Edad</th>
               <th>Tipo</th>
-              <th>Patas</th>
+              <th>Patas</th> -->
             </tr>
           </thead>
           <tbody id="tCuerpo">
