FUNCIONANDO EL CHECKBOX Y LOS TITULOS

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -153,16 +153,17 @@
       <h2>Listado de Mascotas</h2>
       <div class="table-responsive">
         <table class="table table-hover" id="tabla">
-            <tr class="info">
+          <tr class='info'>
             <thead id="tCabecera">
-           
-              <!-- <th>ID</th>
+               <!-- <tr class="info">  -->
+              <th>ID</th>
               <th>Nombre</th>
               <th>Edad</th>
               <th>Tipo</th>
-              <th>Patas</th> -->
-            </tr>
-          </thead>
+              <th>Patas</th>
+            
+            </thead>
+          </tr>
           <tbody id="tCuerpo">
           </tbody>
         </table>
