--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -106,8 +106,8 @@
       <!-- CHECKBOX  -->
       <!-- <!— CHECKBOX —> -->
       <form id="checkFORM">
-      <div class="col-md-offset-5">
-          <div class="checkbox">
+      <div class="col-md-offset-3">
+        <div class="checkbox">
             
             <caption><h3>COLUMNAS VISIBLES:</h3></caption>
             <label>
@@ -129,7 +129,12 @@
               <input type="checkbox" class="checkItems" name="cantPatasfiltro" id="cantPatasfiltro" value="CANTPATAS">CANT. PATAS
           </label>
         </div>
-      </div>
+            <div class="form-group">
+                <label for="Filtro">FILTRAR POR:</label>
+                <select class="form-control" name="filtrarPor" id="filtrarPor">
+                </select>
+            </div>
+    </div>
       </form>
     <!-- TABLA LISTADO -->
     </div>
