OK FUNCIONANDO APP

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -150,6 +150,8 @@
             <!-- CUERPO -->
             <tbody id="tCuerpo">
             </tbody>
+            <tbody id="tCuerpoAUX">
+            </tbody>
         
         </table>
 
