QUE LA SIGAN MAMANDO

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -150,7 +150,7 @@
             <!-- CUERPO -->
             <tbody id="tCuerpo">
             </tbody>
-            <tbody id="tCuerpoAUX">
+            <tbody id="tCuerpoAUX" style='visibility:hidden'>
             </tbody>
         
         </table>
