FUNCIONANDO CON 2 CHECKBOX TILDADOS

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -23,7 +23,7 @@
   <title>Laboratorio III - Practica 2Parcial</title>
 </head>
 
-
+<body>
 <div class="container">
    <!-- FORMULARIOS ENTRADA -->
             <!-- ID -> COMPLETAR
@@ -152,8 +152,10 @@
             </tbody>
             <tbody id="tCuerpoAUX" style='visibility:hidden'>
             </tbody>
-        
+            <tbody id="tCuerpoTXT" style='visibility:hidden'>
+            </tbody>    
         </table>
+        
 
       </div>
     </div>
