OK FUNCIONANDOY SE LIMPIA AL AGREGAR

--- a/PRACTICAPARCIAL/index.html
+++ b/PRACTICAPARCIAL/index.html
@@ -31,6 +31,7 @@
             EDAD -> COMPLETAR
             TIPO ->ENUM TIPO
             CANTIDAD PATAS -> COMPLETAR -->
+            <form id="formCARGA">        
     <div class"row">   
             <!--  ID-->
               <div class="form-group">
@@ -66,7 +67,7 @@
               </div>
       
       </div>
-        
+    </form>
       <!-- BOTONES -->
       <div class="container row">
           <div class="col-md-offset-1">
