--- a/PARCIAL/index.html
+++ b/PARCIAL/index.html
@@ -61,6 +61,8 @@
               </div>
       
       </div>
+      <input type='file' id="bannerImg" onchange="readURL(this);" />
+      <img src="" id="tableBanner" />
     </form>
     
       <!-- BOTONES -->
