OK FUNCIONANDO BOTON

--- a/PARCIAL/index.html
+++ b/PARCIAL/index.html
@@ -90,11 +90,30 @@
               </button>
           </div>
     </div>
-      </div>
+</form>
+      <!-- </div> -->
 
-    </section>
+      <!-- BOTON PROMEDIO -->
+      <br>
+      <br>
+      <br>
+    <div>
+      <button type="button" class="btn btn-info" onclick="calcularPromedio()">Promedio</button>
+    </div>
+    <!-- <form id="respuestaBot">
+        <div>
+        </div>
+    </form> -->
+    <form id="formPromedio">        
+            <div class"col-md-offset-5">   
+            <label for='promedio' id="labelProm">PROMEDIO</label><br>
+              </div>
+              <!-- <input type='file' id="bannerImg" onchange="readURL(this);" />
+              <img src="" id="tableBanner" /> -->
+    </form>
+            
 
-      <!-- <!— CHECKBOX —> -->
+    <!-- <!— CHECKBOX —> -->
       <form id="checkFORM">
       <div class="col-md-offset-5">
         <div class="checkbox">
