--- a/FINAL_COMANDAv2/index.html
+++ b/FINAL_COMANDAv2/index.html
@@ -7,11 +7,14 @@
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
 
   <script src="js/jquery-3.2.1.js"></script>
-<!--  
+ 
+  <!-- MODULOS -->
+  <script src="TS/Cliente.js"></script>
   <script src="TS/Persona.js"></script>
   <script src="TS/Empleado.js"></script>
   <script src="TS/enumerado.js"></script>
-  <script src="TS/app.js"></script> -->
+  
+  <script src="TS/app.js"></script>
 
   <!-- ESTILO EXTERNO -->
   <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
