--- a/FINAL_COMANDAv2/index.html
+++ b/FINAL_COMANDAv2/index.html
@@ -9,12 +9,14 @@
   <script src="js/jquery-3.2.1.js"></script>
  
   <!-- MODULOS -->
-  <script src="TS/Cliente.js"></script>
-  <script src="TS/Persona.js"></script>
-  <script src="TS/Empleado.js"></script>
   <script src="TS/enumerado.js"></script>
-  
   <script src="TS/app.js"></script>
+  <script src="TS/Persona.js"></script>
+  <script src="TS/Cliente.js"></script>
+  <!-- <script src="TS/Mesa.js"></script> -->
+  <script src="TS/Empleado.js"></script>
+  <script src="TS/Pedido.js"></script>
+  
 
   <!-- ESTILO EXTERNO -->
   <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -38,7 +40,7 @@
       <div class="login-box-body">
         <!--<p class="login-box-msg">Sign in to start your session</p>-->
         <img id="profile-img" src="img/loginImage.png">
-        <form onsubmit="validaLogin(); return false;">
+        <form onsubmit="validaLogin();">
           <div class="form-group has-feedback">
             <input id="mailingresado" type="email" class="form-control" placeholder="Email" autocomplete="off" autofocus/>
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
