--- a/FINAL_COMANDAv2/home.html
+++ b/FINAL_COMANDAv2/home.html
@@ -21,9 +21,9 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a href="home.html" class="navbar-brand">LA <b>COMANDA</b>
-              <!--<span><img src="img/millenniumFalcon.png" style="height: 30px;"></span>-->
+
               <span><img src="img/menu.png" style="height: 30px;"></span>
-              <!--<span><img src="img/parkHereLogo.png" style="height: 30px;"></span>-->
+
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
               <i class="fa fa-bars"></i>
@@ -34,7 +34,7 @@
           <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
               <!-- <?php if($usuarioLogueado->getRol()->getId() != 2) { ?> -->
-                <li class="active"><a onclick="mostrarEmpleados()">Empleados <span class="sr-only">(current)</span></a></li>
+                <li class="active"><a onclick="agregarEmpleado()">Agregar Empleado <span class="sr-only">(current)</span></a></li>
               <!-- <?php } ?> -->
               <li><a onclick="mostrarVehiculos()">Vehiculos</a></li>
               <li><a onclick="mostrarCocheras()">Cocheras</a></li>
