OK Agregando empleado, viendo login

--- a/FINAL_COMANDAv2/index.html
+++ b/FINAL_COMANDAv2/index.html
@@ -34,7 +34,10 @@
     <div class="login-box">
       <div class="login-logo">
         <!--Park <b>Here </b><img src="img/millenniumFalcon.png" style="height: 30px;">-->
-        LA <b>COMANDA </b><img src="img/menu.png" style="height: 100px;">
+        <img src="img/menu_comanda.png" style="height: 100px;">
+        <p id="tituloLogin">
+          COMANDA 3.0 
+        </p>
         <!--Park <b>Here </b><img src="img/parkHereLogo.png" style="height: 30px;">-->
       </div><!-- /.login-logo -->
       <div class="login-box-body">
