--- a/FINAL_COMANDAv2/home.html
+++ b/FINAL_COMANDAv2/home.html
@@ -11,8 +11,21 @@
     <link href="Estilo_Bootstrap/plugins/iCheck/square/blue.css" rel="stylesheet" type="text/css" />
     <link href="Estilo_Bootstrap/plugins/datepicker/datepicker3.css" rel="stylesheet" type="text/css" />
     <link href="css/estilos.css" rel="stylesheet" type="text/css" />
+    
+    <!-- jQuery 2.1.3 -->
+    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
+    <!-- Bootstrap 3.3.2 JS -->
+    <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- iCheck -->
+    <script src="Estilo_Bootstrap/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
+    <!-- date-range-picker -->
+    <script src="Estilo_Bootstrap/plugins/datepicker/bootstrap-datepicker.js" type="text/javascript"></script>
+    <script src="TS/Persona.js"></script>
+    <script src="TS/Empleado.js"></script>
+    <script src="TS/enumerado.js"></script>
+    <script src="TS/app.js"></script>
 
-    <title>LA COMANDA</title>
+    <title>COMANDA 3.0</title>
   </head>
 
   <body class="skin-blue" data-spy="scroll">
@@ -20,10 +33,8 @@
       <nav class="navbar navbar-static-top">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a href="home.html" class="navbar-brand">LA <b>COMANDA</b>
-
-              <span><img src="img/menu.png" style="height: 30px;"></span>
-
+            <a href="home.html" class="navbar-brand"> <b>COMANDA 3.0</b>
+              <span><img src="img/menu.png" style="height: 35px; position: align-self: auto;;"></span>
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
               <i class="fa fa-bars"></i>
@@ -117,15 +128,7 @@
     </div><!-- /.modal-dialog -->
   </div>
 
-    <!-- jQuery 2.1.3 -->
-    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
-    <!-- Bootstrap 3.3.2 JS -->
-    <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-    <!-- iCheck -->
-    <script src="Estilo_Bootstrap/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
-    <!-- date-range-picker -->
-    <script src="Estilo_Bootstrap/plugins/datepicker/bootstrap-datepicker.js" type="text/javascript"></script>
-    <script src="TS/app.js"></script>
+
   </body>
 </html>
 
