--- a/FINAL_COMANDAv2/home.html
+++ b/FINAL_COMANDAv2/home.html
@@ -34,7 +34,7 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a href="home.html" class="navbar-brand"> <b>COMANDA 3.0</b>
-              <span><img src="img/menu.png" style="height: 35px; position: align-self: auto;;"></span>
+              <span><img src="img/menu.png" style="height: 35px";></span>
             </a>
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
               <i class="fa fa-bars"></i>
