Arreglado el home, en home2

--- a/FINAL_COMANDAv2/home.html
+++ b/FINAL_COMANDAv2/home.html
@@ -34,8 +34,9 @@
         <div class="container-fluid">
           <div class="navbar-header">
             <a href="home.html" class="navbar-brand"> <b>COMANDA 3.0</b>
-              <span><img src="img/menu.png" style="height: 35px";></span>
             </a>
+              <span><img src="img/menu.png" style="height: 35px"></span>
+            
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
               <i class="fa fa-bars"></i>
             </button>
@@ -64,11 +65,11 @@
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Estadisticas <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
-                  <li><a onclick="traerEstadisticasEmpleado()">Empleados</a></li>
+                  <!-- <li><a onclick="traerEstadisticasEmpleado()">Empleados</a></li>
                   <li><a onclick="traerEstadisticasCochera()">Cocheras</a></li>
                   <li><a onclick="traerEstadisticasVehiculo()">Vehiculos</a></li>
                   <li><a onclick="traerEstadisticasCaja()">Caja</a></li>
-                  <li><a onclick="TraerEstadiasPorVehiculo()">TOP 5 Vehiculos</a></li>
+                  <li><a onclick="TraerEstadiasPorVehiculo()">TOP 5 Vehiculos</a></li> -->
                 </ul>
               <!-- <?php } ?> -->
               </li>
