--- a/FINAL_COMANDAv2/home2.html
+++ b/FINAL_COMANDAv2/home2.html
@@ -22,59 +22,69 @@
     <script src="TS/app.js"></script>
   </head>
   <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
-    <div class="box box-solid">
-      <div class="box-body layout-top-nav">
-        <span class="eg">Top Nav Example</span>
         <header class="main-header">               
           <nav class="navbar navbar-static-top">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a href="../../index2.html" class="navbar-brand"><b>Admin</b>LTE</a>
+                <a href="../../index2.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                   <i class="fa fa-bars"></i>
                 </button>
+                <span><img src="img/menu.png" style="height: 35px" vspace="5"></span>
               </div>
+              <div></div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                  <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-                  <li><a href="#">Link</a></li>
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empleados <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                      <li class="divider"></li>
-                      <li><a href="#">One more separated link</a></li>
+                      <li><a onclick="muestraAgregarEmpleado()">Nuevo Empleado</a></li>
+                      <li><a onclick="traerOperaciones()">Lista de Empleados</a></li>
                     </ul>
+                    </li>
+                  <li><a onclick="mostrarVehiculos()">Vehiculos</a></li>
+                  <li><a onclick="mostrarCocheras()">Cocheras</a></li>
+                  <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Transacciones <span class="caret"></span></a>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a onclick="iniciarOperacion()">Nueva</a></li>
+                    <li><a onclick="traerOperaciones()">Finalizar</a></li>
+                  </ul>
                   </li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                  <div class="form-group">
-                    <input type="text" class="form-control" id="navbar-search-input" placeholder="Search">
-                  </div>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#">Link</a></li>
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><a href="#">Action</a></li>
-                      <li><a href="#">Another action</a></li>
-                      <li><a href="#">Something else here</a></li>
-                      <li class="divider"></li>
-                      <li><a href="#">Separated link</a></li>
-                    </ul>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Estadisticas <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">    
+                      <ul class="nav navbar-nav navbar-right">
+                        <!-- User Account: style can be found in dropdown.less -->
+                        <li class="dropdown user user-menu">
+                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            <img src="img/loginImage.jpg" class="user-image" alt="User Image"/>
+                            <!-- <span class="hidden-xs"><?php echo $usuarioLogueado->getNombre(); ?></span> -->
+                          </a>
+                          <ul class="dropdown-menu">
+                            <!-- User image -->
+                            <li class="user-header">
+                            <img src="img/loginImage.jpg" class="img-circle" alt="User Image" />
+                            <p>
+                              <!-- <?php echo $usuarioLogueado->getNombre(). " - Turno " . $usuarioLogueado->getTurno()->getDescripcion(); ?> -->
+                              <!-- <small>Logueado desde <?php echo $login; ?></small> -->
+                            </p>
+                            </li>
+                            <!-- Menu Footer-->
+                            <li class="user-footer">
+                              <div class="center-block">
+                                <a onclick="desloguear()" class="btn btn-default btn-flat btn-block">Finalizar Sesión</a>
+                              </div>
+                            </li>
                   </li>
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
         </header>
+        <div id="principal" class="col-md-6 col-md-offset-3">
       </div>
     </div>
   </pre>
