OK LOGIN CON ARCHIVOS DE JQUERY CAMBIADOS

--- a/FINAL_COMANDAv2/home2.html
+++ b/FINAL_COMANDAv2/home2.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Documentation</title>
+    <title>COMANDA 3.0</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -34,7 +34,6 @@
               </div>
               <div></div>
 
-              <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
