--- a/FINAL_COMANDAv2/index.html
+++ b/FINAL_COMANDAv2/index.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <html lang="es">
 
 <head>
   <meta charset="UTF-8">
-  <title>LA COMANDA</title>
+  <title>COMANDA 3.0</title>
   <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
-
-  <script src="js/jquery-3.2.1.js"></script>
  
   <!-- MODULOS -->
   <script src="TS/enumerado.js"></script>
@@ -43,7 +41,7 @@
       <div class="login-box-body">
         <!--<p class="login-box-msg">Sign in to start your session</p>-->
         <img id="profile-img" src="img/loginImage.png">
-        <form onsubmit="validaLogin();">
+        <form>
           <div class="form-group has-feedback">
             <input id="mailingresado" type="email" class="form-control" placeholder="Email" autocomplete="off" autofocus/>
             <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
@@ -62,7 +60,7 @@
             </div><!-- /.col -->
           </div>
           <div class="form-group">
-              <button type="submit" class="btn btn-primary btn-block btn-flat">Ingresar</button>
+              <button type="button" onclick="validaLogin();" class="btn btn-primary btn-block btn-flat">Ingresar</button>
           </div>
         </form>
         <div><span class="label label-danger" id="errorLogin"></span></div>
@@ -70,12 +68,12 @@
     </div><!-- /.login-box -->
 
     <!-- jQuery 2.1.3 -->
-    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
+    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js" type="text/javascript" ></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- iCheck -->
     <script src="Estilo_Bootstrap/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
-    <script src="js/funciones.js"></script>
+    <!-- <script src="js/funciones.js" type="text/javascript"></script> -->
     <script>
       $(function () {
         $('input').iCheck({
