--- a/FINAL_COMANDAv2/home2.html
+++ b/FINAL_COMANDAv2/home2.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome Icons -->
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
     <!-- Ionicons -->
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
@@ -40,7 +40,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empleados <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                       <li><a onclick="muestraAgregarEmpleado()">Nuevo Empleado</a></li>
-                      <li><a onclick="traerOperaciones()">Lista de Empleados</a></li>
+                      <li><a onclick="mostrarEmpleados()">Lista de Empleados</a></li>
                     </ul>
                     </li>
                   <li><a onclick="mostrarVehiculos()">Vehiculos</a></li>
@@ -97,7 +97,7 @@
     <script src="Estilo_Bootstrap/dist/js/app.min.js" type="text/javascript"></script>
     <!-- SlimScroll 1.3.0 -->
     <script src="Estilo_Bootstrap/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
-    <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
+    <!-- <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script> -->
     <script>
       $(function () {
         $(".sidebar-menu li a").click(function () {
