FUNCIONANDO OK EL MOSTRAR EMPLEADOS

--- a/FINAL_COMANDAv2/home2.html
+++ b/FINAL_COMANDAv2/home2.html
@@ -15,7 +15,6 @@
     <link href="Estilo_Bootstrap/dist/css/AdminLTE.min.css" rel="stylesheet" type="text/css" />
     <link href="Estilo_Bootstrap/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
     <link href="css\estilos.css" rel="stylesheet" type="text/css" />
- 
     <script src="TS/Persona.js"></script>
     <script src="TS/Empleado.js"></script>
     <script src="TS/enumerado.js"></script>
@@ -26,7 +25,7 @@
           <nav class="navbar navbar-static-top">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a href="../../index2.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
+                <a href="../../home2.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                   <i class="fa fa-bars"></i>
                 </button>
@@ -42,7 +41,7 @@
                       <li><a onclick="muestraAgregarEmpleado()">Nuevo Empleado</a></li>
                       <li><a onclick="mostrarEmpleados()">Lista de Empleados</a></li>
                     </ul>
-                    </li>
+                  </li>
                   <li><a onclick="mostrarVehiculos()">Vehiculos</a></li>
                   <li><a onclick="mostrarCocheras()">Cocheras</a></li>
                   <li class="dropdown">
