--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -25,7 +25,7 @@
           <nav class="navbar navbar-static-top">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a href="../../home2.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
+                <a href="home.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                   <i class="fa fa-bars"></i>
                 </button>
