--- a/FINAL_COMANDAv3/homeCLIENTE.html
+++ b/FINAL_COMANDAv3/homeCLIENTE.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COMANDA SERVICIOS</title>
+    <title>COMANDA CLIENTE</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -36,7 +36,7 @@
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Listado de Pendientes <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" onclick="mostrarPedidos();" data-toggle="dropdown">Mis Pedidos <span class="caret"></span></a>
                   </li>
                 </ul>
               </div><!-- /.navbar-collapse -->
