--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COMANDA 3.0</title>
+    <title>COMANDA MOZO</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -25,7 +25,7 @@
           <nav class="navbar navbar-static-top">
             <div class="container-fluid">
               <div class="navbar-header">
-                <a href="home.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
+                <a href="homeMOZO.html" class="navbar-brand"><b>COMANDA</b>3.0</a>
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
                   <i class="fa fa-bars"></i>
                 </button>
@@ -36,52 +36,20 @@
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Empleados <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedidos <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a onclick="muestraAgregarEmpleado()">Nuevo Empleado</a></li>
-                      <li><a onclick="mostrarEmpleados()">Lista de Empleados</a></li>
+                      <li><a onclick="muestraAgregarEmpleado()">Nuevo Pedido</a></li>
+                      <li><a onclick="mostrarEmpleados()">Lista de Pedidos</a></li>
                     </ul>
                   </li>
-                  <li><a onclick="mostrarVehiculos()">Vehiculos</a></li>
-                  <li><a onclick="mostrarCocheras()">Cocheras</a></li>
-                  <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Transacciones <span class="caret"></span></a>
-                  <ul class="dropdown-menu" role="menu">
-                    <li><a onclick="iniciarOperacion()">Nueva</a></li>
-                    <li><a onclick="traerOperaciones()">Finalizar</a></li>
-                  </ul>
-                  </li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">Estadisticas <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">    
-                      <ul class="nav navbar-nav navbar-right">
-                        <!-- User Account: style can be found in dropdown.less -->
-                        <li class="dropdown user user-menu">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="img/loginImage.jpg" class="user-image" alt="User Image"/>
-                            <!-- <span class="hidden-xs"><?php echo $usuarioLogueado->getNombre(); ?></span> -->
-                          </a>
-                          <ul class="dropdown-menu">
-                            <!-- User image -->
-                            <li class="user-header">
-                            <img src="img/loginImage.jpg" class="img-circle" alt="User Image" />
-                            <p>
-                              <!-- <?php echo $usuarioLogueado->getNombre(). " - Turno " . $usuarioLogueado->getTurno()->getDescripcion(); ?> -->
-                              <!-- <small>Logueado desde <?php echo $login; ?></small> -->
-                            </p>
-                            </li>
-                            <!-- Menu Footer-->
-                            <li class="user-footer">
-                              <div class="center-block">
-                                <a onclick="desloguear()" class="btn btn-default btn-flat btn-block">Finalizar Sesión</a>
-                              </div>
-                            </li>
-                  </li>
+                  <li><a onclick="mostrarMesas()">Lista de Mesas</a></li>
+                  
                 </ul>
               </div><!-- /.navbar-collapse -->
             </div><!-- /.container-fluid -->
           </nav>
         </header>
+        
         <div id="principal" class="col-md-6 col-md-offset-3">
       </div>
     </div>
