--- a/FINAL_COMANDAv3/homeCLIENTE.html
+++ b/FINAL_COMANDAv3/homeCLIENTE.html
@@ -16,6 +16,7 @@
     <link href="Estilo_Bootstrap/dist/css/skins/skin-blue.min.css" rel="stylesheet" type="text/css" />
     <link href="css\estilos.css" rel="stylesheet" type="text/css" />
     <script src="TS/Persona.js"></script>
+    <script src="TS/Mesa.js"></script>
     <script src="TS/Empleado.js"></script>
     <script src="TS/enumerado.js"></script>
     <script src="TS/app.js"></script>
