--- a/FINAL_COMANDAv3/homeSERVICIO.html
+++ b/FINAL_COMANDAv3/homeSERVICIO.html
@@ -17,6 +17,7 @@
     <link href="css\estilos.css" rel="stylesheet" type="text/css" />
     <script src="TS/Persona.js"></script>
     <script src="TS/Empleado.js"></script>
+    <script src="TS/Mesa.js"></script>
     <script src="TS/enumerado.js"></script>
     <script src="TS/app.js"></script>
   </head>
