--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -18,6 +18,7 @@
     <script src="TS/Persona.js"></script>
     <script src="TS/Empleado.js"></script>
     <script src="TS/Mesa.js"></script>
+    <script src="TS/Pedido.js"></script>
     <script src="TS/enumerado.js"></script>
     <script src="TS/app.js"></script>
   </head>
@@ -39,8 +40,8 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedidos <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a onclick="muestraAgregarEmpleado()">Nuevo Pedido</a></li>
-                      <li><a onclick="mostrarEmpleados()">Lista de Pedidos</a></li>
+                      <li><a onclick="muestraAgregarPedido()">Nuevo Pedido</a></li>
+                      <li><a onclick="mostrarPedidos()">Lista de Pedidos</a></li>
                     </ul>
                   </li>
                   <li><a onclick="mostrarMesas()">Lista de Mesas</a></li>
