--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -41,7 +41,7 @@
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedidos <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
                       <li><a onclick="muestraAgregarPedido()">Nuevo Pedido</a></li>
-                      <li><a onclick="mostrarPedidos()">Lista de Pedidos</a></li>
+                      <li><a onclick="mostrarPedidosMozo()">Lista de Pedidos</a></li>
                     </ul>
                   </li>
                   <li><a onclick="mostrarMesas()">Lista de Mesas</a></li>
