--- a/FINAL_COMANDAv3/homeSOCIO.html
+++ b/FINAL_COMANDAv3/homeSOCIO.html
@@ -55,7 +55,7 @@
                 </ul>
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <a href="#"  onclick="mostrarPedidos2();" class="dropdown-toggle" data-toggle="dropdown">Listado de Pedidos</a>
+                    <a href="#"  onclick="mostrarPedidosJefe();" class="dropdown-toggle" data-toggle="dropdown">Listado de Pedidos</a>
                   </li>
                 </ul>
                 <ul class="nav navbar-nav">
