--- a/FINAL_COMANDAv3/homeCLIENTE.html
+++ b/FINAL_COMANDAv3/homeCLIENTE.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>COMANDA CLIENTE</title>
+    <link id="appFavicon" rel="icon" type="image/x-icon" href="img/favicon.png">
+    <title>CLIENTE</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
