TERMINADA LA LISTA CON ESTILO EN EL DIV, QUEDA LO DE DISABLED

--- a/FINAL_COMANDAv3/homeSOCIO.html
+++ b/FINAL_COMANDAv3/homeSOCIO.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome Icons -->
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
     <!-- Ionicons -->
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
@@ -69,7 +69,7 @@
             </div><!-- /.container-fluid -->
           </nav>
         </header>
-        <div id="principal" class="col-md-6 col-md-offset-3">
+        <div id="principal" class="col-lg-10 col-md-offset-1">
       </div>
     </div>
   </pre>
