CORREGIDO LOS ESTILOS DE COLUMNAS, SIGO CON EL ONSUBMIT DEL FORM

--- a/FINAL_COMANDAv3/homeSOCIO.html
+++ b/FINAL_COMANDAv3/homeSOCIO.html
@@ -69,8 +69,10 @@
             </div><!-- /.container-fluid -->
           </nav>
         </header>
-        <div id="principal" class="col-lg-10 col-md-offset-1">
-      </div>
+        <!-- DIVS DINAMICOS -->
+        <div id="principal" class="col-lg-10 col-md-offset-1"></div> 
+        <div id="agregar" class="col-md-5 col-md-offset-3 margin-right=83px"></div> 
+        <div id="listar" class="col-lg-10 col-md-offset-1"></div> 
     </div>
   </pre>
     <!-- jQuery 2.1.3 -->
