--- a/FINAL_COMANDAv3/homeCLIENTE.html
+++ b/FINAL_COMANDAv3/homeCLIENTE.html
@@ -45,7 +45,9 @@
             </div><!-- /.container-fluid -->
           </nav>
         </header>
-        <div id="principal" class="col-md-6 col-md-offset-3">
+        <div id="principal" class="col-lg-10 col-md-offset-1"></div> 
+        <div id="agregar" class="col-md-5 col-md-offset-3 margin-right=83px"></div> 
+        <div id="listar" class="col-lg-10 col-md-offset-1"></div> 
       </div>
     </div>
   </pre>
