--- a/FINAL_COMANDAv3/homeSOCIO.html
+++ b/FINAL_COMANDAv3/homeSOCIO.html
@@ -10,6 +10,8 @@
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
     <!-- Font Awesome Icons -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" />
+    <!-- daterange picker -->
+    <link href="Estilo_Bootstrap/plugins/daterangepicker/daterangepicker-bs3.css" rel="stylesheet" type="text/css" />
     <!-- Ionicons -->
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
@@ -86,6 +88,7 @@
     <!-- SlimScroll 1.3.0 -->
     <script src="Estilo_Bootstrap/plugins/slimScroll/jquery.slimscroll.min.js" type="text/javascript"></script>
     <!-- <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script> -->
+  
     <script>
       $(function () {
         $(".sidebar-menu li a").click(function () {
@@ -95,10 +98,11 @@
             $("body").animate({
               scrollTop: ($(target).offset().top - 32) + "px"
             }, 500);
+            }
           }
+                                    )          
         });
 
-      });
     </script>
   </body>
 </html>
