--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -8,8 +8,9 @@
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
     <!-- Bootstrap 3.3.2 -->
     <link href="Estilo_Bootstrap/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-    <!-- Font Awesome Icons -->
-    <!-- <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet" type="text/css" /> -->
+     <!-- jQuery 2.1.3 -->
+     <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
+   
     <!-- Ionicons -->
     <link href="http://code.ionicframework.com/ionicons/2.0.0/css/ionicons.min.css" rel="stylesheet" type="text/css" />
     <!-- Theme style -->
@@ -21,7 +22,7 @@
     <script src="TS/Mesa.js"></script>
     <script src="TS/Pedido.js"></script>
     <script src="TS/enumerado.js"></script>
-    <script src="TS/app.js"></script>
+    
   </head>
   <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
         <header class="main-header">               
@@ -41,7 +42,7 @@
                   <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pedidos <span class="caret"></span></a>
                     <ul class="dropdown-menu" role="menu">
-                      <li><a onclick="muestraAgregarPedido()">Nuevo Pedido</a></li>
+                      <li><a onclick="muestraAgregarPedido();filtroMesasActivas();">Nuevo Pedido</a></li>
                       <li><a onclick="mostrarPedidosMozo()">Lista de Pedidos</a></li>
                     </ul>
                   </li>
@@ -59,8 +60,7 @@
       </div>
     </div>
   </pre>
-    <!-- jQuery 2.1.3 -->
-    <script src="Estilo_Bootstrap/plugins/jQuery/jQuery-2.1.3.min.js"></script>
+  <script src="TS/app.js"></script>
     <!-- Bootstrap 3.3.2 JS -->
     <script src="Estilo_Bootstrap/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
     <!-- FastClick -->
