TERMINADO LISTADO DE MESAS POR PERFIL, VOY A BOTON DAR DE BAJA

--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -46,7 +46,7 @@
                       <li><a onclick="mostrarPedidosMozo()">Lista de Pedidos</a></li>
                     </ul>
                   </li>
-                  <li><a onclick="mostrarMesas()">Lista de Mesas</a></li>
+                  <li><a onclick="mostrarMesas(true)">Lista de Mesas</a></li>
                   
                 </ul>
               </div><!-- /.navbar-collapse -->
