FINALIZADO EL REDIRECT DE PAGINA POR CADA UNO, SIGO CON LO DEL CLIENTE

--- a/FINAL_COMANDAv3/homeSERVICIOBAR.html
+++ b/FINAL_COMANDAv3/homeSERVICIOBAR.html
@@ -39,7 +39,7 @@
               <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
                   <li class="dropdown">
-                    <li><a onclick="mostrarPedidosServicio();">Lista de Pendientes</a></li>
+                    <li><a onclick="mostrarPedidosServicioBAR();">Lista de Pendientes</a></li>
                   </li>
                 </ul>
               </div><!-- /.navbar-collapse -->
