--- a/FINAL_COMANDAv3/homeCLIENTELISTA.html
+++ b/FINAL_COMANDAv3/homeCLIENTELISTA.html
@@ -20,6 +20,7 @@
        <script src="TS/Mesa.js"></script>
        <script src="TS/Empleado.js"></script>
        <script src="TS/enumerado.js"></script>
+       <script src="TS/Pedido.js"></script>
        <script src="TS/app.js"></script>
     
   </head>
