--- a/FINAL_COMANDAv3/homeCLIENTE.html
+++ b/FINAL_COMANDAv3/homeCLIENTE.html
@@ -12,7 +12,7 @@
   <script src="TS/app.js"></script>
   <script src="TS/Persona.js"></script>
   <script src="TS/Cliente.js"></script>
-  <!-- <script src="TS/Mesa.js"></script> -->
+  <script src="TS/Mesa.js"></script>
   <script src="TS/Empleado.js"></script>
   <script src="TS/Pedido.js"></script>
 
