--- a/FINAL_COMANDAv3/homeMOZO.html
+++ b/FINAL_COMANDAv3/homeMOZO.html
@@ -22,8 +22,9 @@
    <script src="TS/Mesa.js"></script>
    <script src="TS/Empleado.js"></script>
    <script src="TS/enumerado.js"></script>
+   <script src="TS/Pedido.js"></script>
    <script src="TS/app.js"></script>
-   
+
   </head>
   <body class="skin-blue fixed" data-spy="scroll" data-target="#scrollspy">
         <header class="main-header">               
