--- a/FINAL_COMANDAv3/homeSOCIO.html
+++ b/FINAL_COMANDAv3/homeSOCIO.html
@@ -21,6 +21,8 @@
     <script src="TS/Persona.js"></script>
     <script src="TS/Mesa.js"></script>
     <script src="TS/Empleado.js"></script>
+    <script src="TS/Pedido.js"></script>
+    
     <script src="TS/enumerado.js"></script>
     <script src="TS/app.js"></script>
   </head>
